# Park-Ride-Analysis-Darmstadt

./: .gitignore  README.md  pyproject.toml
data/raw/: destinations.txt  einpendelverflechtungen_darmstadt_2021.csv  einpendelverflechtungen_darmstadt_2022.csv  park_and_ride.csv  survey_tt.csv  zielorte.csv
src/park_and_ride_analysis/notebooks/: analyse_data.ipynb  historic_commuter_data.ipynb  map_data.ipynb  preprocess_data.ipynb  zip_map.ipynb
