[tool.poetry]
name = "park-and-ride-analysis"
version = "0.1.0"
description = ""
authors = ["Leon De Andrade <leondeandrade@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"
openpyxl = "^3.1.3"
lxml = "^5.2.2"
geopandas = "^0.14.4"
matplotlib = "^3.9.0"
folium = "^0.17.0"
osmnx = "^1.9.3"
networkx = "^3.3"
scikit-learn = "^1.5.0"
geopy = "^2.4.1"
tqdm = "^4.66.4"
branca = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.yapf]
COLUMN_LIMIT = 120
SPLIT_COMPLEX_COMPREHENSION = true
DEDENT_CLOSING_BRACKETS = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
